add inside link from pokemon.io

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_POKE_API_BASE_URL=https://pokeapi.co/api/v2/
 REACT_APP_POKEMON_ART=https://github.com/PokeAPI/sprites/blob/master/sprites/pokemon/other-sprites/official-artwork/
+REACT_APP_POKE_NEW_ART_INSIDE_API=https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/
